# native_node

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.dev  README.md  REPORT.md  RESEARCH.md
.github/prompts/: README.md  ai-assistant-codegen.prompt.md  ai-assistant-security-checks.prompt.md  ai-assistant-tests-refactor.prompt.md  ci-and-reproducible-builds.prompt.md  implement-jit-backend.prompt.md  implement-sandbox.prompt.md  implement-services.prompt.md  plan-nativeCppScriptingEngine.prompt.md  security-audit-and-threat-model.prompt.md  web-framework-and-triggers.prompt.md
.github/workflows/: ci-docker.yml  ci.yml
ansible/: README.md
ansible/playbooks/: build.yml  e2e.yml  provision.yml  tests.yml
config/: landlock_policy.conf  landlock_policy.example.conf  server.yaml  syscalls.conf  syscalls.example.conf
scripts/: README.md  dev_setup.sh  run_all_tests.sh  sample_script.sh
src/: main.cpp
src/engine/: engine.cpp  engine.h  jit_bootstrap.cpp
src/sandbox/: cgroups.cpp  cgroups.h  executor.cpp  executor.h  invocation_cgroup.cpp  invocation_cgroup.h  ruleset.cpp  ruleset.h  sandbox.cpp  sandbox.h  seccomp.cpp  seccomp.h
src/services/: services.cpp  services.h  sqlite_pool.cpp  sqlite_pool.h
src/web/: simple_http.cpp  simple_http.h  static_server.cpp  static_server.h
src/web/ui/: index.html
tests/: api_status_test.sh  cgroups_limits_test.cpp  cgroups_test.cpp  executor_test.cpp  invocation_cgroup_test.cpp  jit_smoke_test.sh  landlock_policy_test.cpp  landlock_test.cpp  seccomp_test.cpp  sqlite_pool_test.cpp
